:tada: feat: add panic button event

--- a/apps/client/locales/en/calls.json
+++ b/apps/client/locales/en/calls.json
@@ -67,6 +67,6 @@
     "unitsAssignedToCall": "<span>{unit}</span> have been assigned to this call.",
     "unitsUnassignedToCall": "<span>{unit}</span> have been unassigned from this call.",
     "unitArrivedOnScene": "<span>{unit}</span> has arrived on scene.",
-    "unitPressPanicButton": "<span>{unit}</span> has pressed the panic button."
+    "unitPressedPanicButton": "<span>{unit}</span> has pressed the panic button."
   }
 }
