:tada: feat: show license numbers

--- a/apps/client/locales/en/citizen.json
+++ b/apps/client/locales/en/citizen.json
@@ -43,6 +43,10 @@
     "manageLicenses": "Manage Licenses",
     "licenses": "Licenses",
     "licenseSuspendedInfo": "License is suspended. Please contact an officer to revoke the suspension.",
+    "driversLicenseNumber": "License Number",
+    "pilotLicenseNumber": "License Number",
+    "waterLicenseNumber": "License Number",
+    "weaponLicenseNumber": "License Number",
     "alert_deleteCitizen": "Are you sure you want to delete <span>{citizen}</span>? This action cannot be undone."
   },
   "Vehicles": {
