--- a/apps/client/locales/en/citizen.json
+++ b/apps/client/locales/en/citizen.json
@@ -43,6 +43,7 @@
     "manageLicenses": "Manage Licenses",
     "licenses": "Licenses",
     "licenseSuspendedInfo": "License is suspended. Please contact an officer to revoke the suspension.",
+    "licenseNumber": "License Number",
     "alert_deleteCitizen": "Are you sure you want to delete <span>{citizen}</span>? This action cannot be undone."
   },
   "Vehicles": {
