--- a/apps/client/locales/en/leo.json
+++ b/apps/client/locales/en/leo.json
@@ -228,6 +228,7 @@
     "warningApplicable": "Warning Applicable",
     "impounded": "Impounded",
     "impoundVehicle": "Impound Vehicle",
+    "endsOn": "Ends on",
     "warrantCreatedButApprovalRequired": "Successfully created the warrant, however this CAD requires approval for warrants to be active. The warrant will be available once it has been approved.",
     "alert_deleteNote": "Are you sure you want to delete this note? This action cannot be undone.",
     "alert_deleteQualification": "Are you sure you want to delete this qualification? This action cannot be undone.",
