(Locales)  Update leo.json
Update the "en" locales for leo.json to fix capitalization.

--- a/apps/client/locales/en/leo.json
+++ b/apps/client/locales/en/leo.json
@@ -223,7 +223,7 @@
     "showCalls": "Show calls",
     "hideCalls": "Hide calls",
     "showUnitsOnly": "Show units only",
-    "showAllPlayers": "show all players",
+    "showAllPlayers": "Show all players",
     "totalCost": "Total Cost",
     "warningApplicable": "Warning Applicable",
     "impounded": "Impounded",
