--- a/apps/client/locales/ru/leo.json
+++ b/apps/client/locales/ru/leo.json
@@ -228,6 +228,7 @@
     "warningApplicable": "Предупреждение применимо",
     "impounded": "Эвакуировано",
     "impoundVehicle": "Эвакуировать транспорт",
+    "endsOn": "Оканчивается в",
     "warrantCreatedButApprovalRequired": "Ордер успешно создан, однако, CAD требует подтверждения ордера для активации. Ордер будет доступен после подтверждения",
     "alert_deleteNote": "Вы уверены, что хотите удалить эту запись? Это действие необратимо",
     "alert_deleteQualification": "Вы уверены, что хотите удалить квалификацию? Это действие необратимо",
