--- a/apps/client/locales/en/leo.json
+++ b/apps/client/locales/en/leo.json
@@ -231,6 +231,8 @@
     "impoundedBy": "Impounded by",
     "impoundedAt": "Impounded at",
     "endsOn": "Ends on",
+    "assignedToCall#": "You have been assigned to call #{caseNumber}.",
+    "assignedToCall#WithType": "You have been assigned to call #{caseNumber}. Call type: {callType}",
     "warrantCreatedButApprovalRequired": "Successfully created the warrant, however this CAD requires approval for warrants to be active. The warrant will be available once it has been approved.",
     "alert_deleteNote": "Are you sure you want to delete this note? This action cannot be undone.",
     "alert_deleteQualification": "Are you sure you want to delete this qualification? This action cannot be undone.",
