:tada: feat: allow LEO to unmark vehicle as stolen (closes #1197)

--- a/apps/client/locales/en/citizen.json
+++ b/apps/client/locales/en/citizen.json
@@ -44,6 +44,7 @@
     "licenses": "Licenses",
     "licenseSuspendedInfo": "License is suspended. Please contact an officer to revoke the suspension.",
     "licenseNumber": "License Number",
+    "unmarkAsStolen": "Unmark as Stolen",
     "alert_deleteCitizen": "Are you sure you want to delete <span>{citizen}</span>? This action cannot be undone."
   },
   "Vehicles": {
