:tada: feat: add all instances of postal/address search

--- a/apps/client/locales/en/common.json
+++ b/apps/client/locales/en/common.json
@@ -55,7 +55,8 @@
     "savedSettingsSuccess": "Settings successfully saved.",
     "select": "Select...",
     "item": "Item",
-    "address": "Address"
+    "address": "Address",
+    "location": "Location"
   },
   "Nav": {
     "citizen": "Citizen",
