🎉 feat: address dropdowns (#1202)
* :tada: feat: address dropdowns

* chore: add types

* chore: fix types

* :tada: feat: working import & crud

* Format code with prettier

* :tada: feat: working AddressPostalSelect

* Format code with prettier

* :tada: feat: bug fixes & improvements

* :tada: feat: add all instances of postal/address search

* Format code with prettier

* :hammer: chore: 1 migration

Co-authored-by: deepsource-autofix[bot] <62050782+deepsource-autofix[bot]@users.noreply.github.com>

--- a/apps/client/locales/en/common.json
+++ b/apps/client/locales/en/common.json
@@ -54,7 +54,9 @@
     "user": "User",
     "savedSettingsSuccess": "Settings successfully saved.",
     "select": "Select...",
-    "item": "Item"
+    "item": "Item",
+    "address": "Address",
+    "location": "Location"
   },
   "Nav": {
     "citizen": "Citizen",
