:bug: fix: correctly handle impounded vehicles

--- a/apps/client/locales/en/common.json
+++ b/apps/client/locales/en/common.json
@@ -160,6 +160,7 @@
     "alreadyHasPrimaryUnit": "This call already has a primary unit.",
     "noActiveOfficer": "You don't have any active officer at this moment, please get back on-duty first.",
     "socialSecurityNumberTaken": "This social security number is already in use.",
-    "citizenNotAllowedToEditLicenses": "You as a citizen are not allowed to edit your own licenses. Please contact an officer to manage your licenses."
+    "citizenNotAllowedToEditLicenses": "You as a citizen are not allowed to edit your own licenses. Please contact an officer to manage your licenses.",
+    "vehicleIsImpounded": "This vehicle is impounded, you cannot edit or delete until it's released from the impound lot."
   }
 }
