--- a/apps/client/locales/cs-CZ/leo.json
+++ b/apps/client/locales/cs-CZ/leo.json
@@ -25,7 +25,7 @@
     "createTicket": "Vytvořit pokutu",
     "createArrestReport": "Úřední záznam o zadržení",
     "createWrittenWarning": "Domluva",
-    "createBolo": "Create Remark",
+    "createBolo": "Vytvořit pátrání",
     "nameSearch": "Lustrace jména",
     "addressSearch": "Lustrace adresy",
     "notepad": "Poznámky",
@@ -57,17 +57,17 @@
     "writtenWarnings": "Domluvy",
     "arrestReports": "Úřední záznamy",
     "nameNotFound": "Nebyl nalezen nikdo s tímto jménem",
-    "createWarrant": "Vytvořit pátrání",
+    "createWarrant": "Vytvořit zatykač",
     "citizenDead": "UPOZORNĚNÍ: tato osoba zemřela {date}.",
-    "hasWarrants": "UPOZORNĚNÍ: tato osoba je v pátrání!",
+    "hasWarrants": "UPOZORNĚNÍ: na osobu je vypsaný zatykač!",
     "rank": "Hodnost",
     "position": "Pozice",
     "officerLogs": "Záznamy policistů",
     "disableSignal100": "Vypnout prioritu",
     "enableSignal100": "Zapnout prioritu",
     "signal100enabled": "Momentálně probíhá priorita. Ohlaš se operačnímu.",
-    "records": "Evidence",
-    "suspendLicense": "Suspend License",
+    "records": "Záznamy",
+    "suspendLicense": "Zadržet průkaz",
     "deleteRecord": "Odstranit záznam",
     "image": "Snímek",
     "panicButton": "Tlačitko nouze",
