--- a/apps/client/locales/cs-CZ/leo.json
+++ b/apps/client/locales/cs-CZ/leo.json
@@ -153,7 +153,7 @@
     "successCreateArrestReport": "Úspěšně vytvořená zpráva o zatčení {citizen}",
     "successCreateWarning": "Úspěšně vytvořená FPN pro {citizen}",
     "goOnDuty": "Jít do služby",
-    "goOffDuty": "jít mimo službu",
+    "goOffDuty": "Jít mimo službu",
     "officers": "Policisté",
     "callsign1": "Volací znak 1",
     "callsign2": "Volací znak 2",
