--- a/apps/client/locales/cs-CZ/leo.json
+++ b/apps/client/locales/cs-CZ/leo.json
@@ -101,7 +101,7 @@
     "jail": "Vazba",
     "release": "Propuštěn",
     "noImprisonedCitizens": "Nejsou zde zadržené žádné osoby.",
-    "bailPostedBy": "Kauzci složil/a",
+    "bailPostedBy": "Kauci složil/a",
     "noPenalCodesSelected": "Dosud nebyly vybrány žádné obvinění.",
     "penalCode": "Obvinění",
     "total": "Úhrnný",
@@ -114,7 +114,7 @@
     "hideBlips": "Skrýt blipy",
     "showBlips": "Zobrazit blipy",
     "citizenLogs": "Civilista Log",
-    "noCitizenLogs": "There are no civilian logs yet. When a civilian gets arrested, penalised, etc, these will show up here.",
+    "noCitizenLogs": "Dosud zde nic není...",
     "revoke": "Zrušit",
     "warrants": "Zatykač",
     "noWarrants": "Na osobu není vydán žádný zatykač",
