--- a/apps/client/locales/cs-CZ/values.json
+++ b/apps/client/locales/cs-CZ/values.json
@@ -1,8 +1,8 @@
 {
   "Values": {
-    "totalItems": "Total Items",
+    "totalItems": "Všechny předměty",
     "values": "Hodnoty",
-    "shouldDo": "Should Do",
+    "shouldDo": "Měl by",
     "color": "Barva",
     "callsign": "Volací znak",
     "department": "Oddělení",
@@ -12,22 +12,22 @@
     "exportValues": "Exportovat Hodnoty",
     "addPenalCodeGroup": "Přidat skupinu",
     "deleteGroup": "Odstranit skupinu",
-    "ungrouped": "Ungrouped",
+    "ungrouped": "Nezařazen",
     "licenseType": "Typ průkazu",
     "whitelisted": "Whitelisted",
-    "whatPages": "What Pages",
+    "whatPages": "Jake stranky",
     "departments": "Oddělení",
     "isDefaultDepartment": "Výchozí oddělení",
-    "deleteSelectedValues": "Delete Selected Values",
+    "deleteSelectedValues": "Smazat vybrané hodnoty",
     "isDefault": "Je výchozí",
     "defaultOfficerRank": "Výchozí hodnost policisty",
-    "pairedUnitTemplate": "Paired Unit Template",
-    "isConfidential": "Is Confidential",
-    "priority": "Priority",
+    "pairedUnitTemplate": "Spojena hlídka přednastavení",
+    "isConfidential": "Je důvěrné",
+    "priority": "Priorita",
     "isDisabled": "Vypnuto",
-    "alert_deletePenalCodeGroup": "Are you sure you want to delete <span>{group}</span>? This action cannot be undone.",
-    "alert_deleteValue": "Are you sure you want to delete <span>{value}</span>? This action cannot be undone!",
-    "alert_deleteSelectedValues": "Are you sure you want to delete {length} items? This action cannot be undone"
+    "alert_deletePenalCodeGroup": "Jsi si jist, že chceš smazat <span>{group}</span>? Toto nelze vzít zpět.",
+    "alert_deleteValue": "Jsi si jist, že chceš smazat <span>{value}</span>? Toto nelze vzít zpět!",
+    "alert_deleteSelectedValues": "Jsi si jist, že chceš smazat {length} items? Toto nelze vzít zpět"
   },
   "GENDER": {
     "MANAGE": "Spravuj pohlaví",
