--- a/apps/client/locales/cs-CZ/courthouse.json
+++ b/apps/client/locales/cs-CZ/courthouse.json
@@ -5,7 +5,7 @@
     "noExpungementRequests": "Nemáš žádné žádosti o výmaz",
     "request": "Žádosti",
     "noPendingRequests": "Momentálně zde nejsou žádné žádosti",
-    "expungementRequests": "Požádat o výmaz",
+    "expungementRequests": "Žádost o výmaz z RT",
     "nameChangeRequests": "Změna jména",
     "requestNameChange": "Zažádat o změnu jména",
     "noNameChangeRequests": "Nejsou zde žádné žádosti.",
