--- a/apps/client/locales/cs-CZ/leo.json
+++ b/apps/client/locales/cs-CZ/leo.json
@@ -132,7 +132,7 @@
     "noSeizedItems": "Nejsou zde žádné zabavené předměty.",
     "editSeizedItem": "Upravit zabavené předměty",
     "addSeizedItem": "Vložit zabavené předměty",
-    "seizedItems": "zabavené předměty",
+    "seizedItems": "Zabavené předměty",
     "callsignPreview": "Náhled volacího znaku",
     "activeIncidents": "Aktivní událost",
     "noActiveIncidents": "Nejsou zde žádné aktivní události",
