Corrections on Czech language (#1235)
* Czech Language

Added Czech language its 95% DONE, needs to further checked

* Added cs-CZ

Added Czech language option

* Update leo.json

Corrections

* Update leo.json

More corrections

* Update leo.json

more correctionsssss

* Update values.json

a lot of corrections today

* ye

corrections

Co-authored-by: Casper <53900565+Dev-CasperTheGhost@users.noreply.github.com>

--- a/apps/client/locales/cs-CZ/leo.json
+++ b/apps/client/locales/cs-CZ/leo.json
@@ -25,7 +25,7 @@
     "createTicket": "Vytvořit pokutu",
     "createArrestReport": "Úřední záznam o zadržení",
     "createWrittenWarning": "Domluva",
-    "createBolo": "Create Remark",
+    "createBolo": "Vytvořit pátrání",
     "nameSearch": "Lustrace jména",
     "addressSearch": "Lustrace adresy",
     "notepad": "Poznámky",
@@ -57,17 +57,17 @@
     "writtenWarnings": "Domluvy",
     "arrestReports": "Úřední záznamy",
     "nameNotFound": "Nebyl nalezen nikdo s tímto jménem",
-    "createWarrant": "Vytvořit pátrání",
+    "createWarrant": "Vytvořit zatykač",
     "citizenDead": "UPOZORNĚNÍ: tato osoba zemřela {date}.",
-    "hasWarrants": "UPOZORNĚNÍ: tato osoba je v pátrání!",
+    "hasWarrants": "UPOZORNĚNÍ: na osobu je vypsaný zatykač!",
     "rank": "Hodnost",
     "position": "Pozice",
     "officerLogs": "Záznamy policistů",
     "disableSignal100": "Vypnout prioritu",
     "enableSignal100": "Zapnout prioritu",
     "signal100enabled": "Momentálně probíhá priorita. Ohlaš se operačnímu.",
-    "records": "Evidence",
-    "suspendLicense": "Suspend License",
+    "records": "Záznamy",
+    "suspendLicense": "Zadržet průkaz",
     "deleteRecord": "Odstranit záznam",
     "image": "Snímek",
     "panicButton": "Tlačitko nouze",
@@ -101,7 +101,7 @@
     "jail": "Vazba",
     "release": "Propuštěn",
     "noImprisonedCitizens": "Nejsou zde zadržené žádné osoby.",
-    "bailPostedBy": "Kauzci složil/a",
+    "bailPostedBy": "Kauci složil/a",
     "noPenalCodesSelected": "Dosud nebyly vybrány žádné obvinění.",
     "penalCode": "Obvinění",
     "total": "Úhrnný",
@@ -114,7 +114,7 @@
     "hideBlips": "Skrýt blipy",
     "showBlips": "Zobrazit blipy",
     "citizenLogs": "Civilista Log",
-    "noCitizenLogs": "There are no civilian logs yet. When a civilian gets arrested, penalised, etc, these will show up here.",
+    "noCitizenLogs": "Dosud zde nic není...",
     "revoke": "Zrušit",
     "warrants": "Zatykač",
     "noWarrants": "Na osobu není vydán žádný zatykač",
@@ -132,7 +132,7 @@
     "noSeizedItems": "Nejsou zde žádné zabavené předměty.",
     "editSeizedItem": "Upravit zabavené předměty",
     "addSeizedItem": "Vložit zabavené předměty",
-    "seizedItems": "zabavené předměty",
+    "seizedItems": "Zabavené předměty",
     "callsignPreview": "Náhled volacího znaku",
     "activeIncidents": "Aktivní událost",
     "noActiveIncidents": "Nejsou zde žádné aktivní události",
@@ -153,7 +153,7 @@
     "successCreateArrestReport": "Úspěšně vytvořená zpráva o zatčení {citizen}",
     "successCreateWarning": "Úspěšně vytvořená FPN pro {citizen}",
     "goOnDuty": "Jít do služby",
-    "goOffDuty": "jít mimo službu",
+    "goOffDuty": "Jít mimo službu",
     "officers": "Policisté",
     "callsign1": "Volací znak 1",
     "callsign2": "Volací znak 2",
