:tada: feat: add support for info icon

--- a/apps/client/locales/en/common.json
+++ b/apps/client/locales/en/common.json
@@ -58,7 +58,8 @@
     "address": "Address",
     "location": "Location",
     "startTyping": "Start typing...",
-    "searching": "Searching..."
+    "searching": "Searching...",
+    "information": "Information"
   },
   "Nav": {
     "citizen": "Citizen",
