--- a/apps/client/locales/cs-CZ/leo.json
+++ b/apps/client/locales/cs-CZ/leo.json
@@ -20,7 +20,7 @@
     "citizen": "Civilista",
     "postal": "Postal",
     "notes": "Poznámky",
-    "violations": "Trestné činy",
+    "violations": "Přestupky a Trestné činy",
     "division": "Oddělení",
     "createTicket": "Vytvořit pokutu",
     "createArrestReport": "Úřední záznam o zadržení",
