:hammer: chore: minor fixes

--- a/apps/client/locales/en/citizen.json
+++ b/apps/client/locales/en/citizen.json
@@ -47,6 +47,11 @@
     "unmarkAsStolen": "Unmark as Stolen",
     "markCitizenDeceased": "Mark Citizen Deceased",
     "citizenDead": "WARNING: This citizen died on {date}",
+    "basicInformation": "Basic Information",
+    "optionalInformation": "Optional Information",
+    "licenseInformation": "License Information",
+    "officer": "Officer",
+    "createWithOfficer": "Create with Officer",
     "alert_markCitizenDeceased": "Are you sure you want to delete <span>{citizen}</span>? Only EMS/FD can mark you alive again.",
     "alert_deleteCitizen": "Are you sure you want to delete <span>{citizen}</span>? This action cannot be undone."
   },
