--- a/apps/client/locales/en/citizen.json
+++ b/apps/client/locales/en/citizen.json
@@ -52,6 +52,8 @@
     "licenseInformation": "License Information",
     "officer": "Officer",
     "createWithOfficer": "Create with Officer",
+    "previousRecords": "Previous Records",
+    "createPreviousRecordsStepDescription": "Here you can optionally add previous records this citizen has had. This is useful for when a citizen has been arrested before.",
     "alert_markCitizenDeceased": "Are you sure you want to delete <span>{citizen}</span>? Only EMS/FD can mark you alive again.",
     "alert_deleteCitizen": "Are you sure you want to delete <span>{citizen}</span>? This action cannot be undone."
   },
