--- a/apps/client/locales/fr-FR/common.json
+++ b/apps/client/locales/fr-FR/common.json
@@ -52,7 +52,14 @@
     "left": "Gauche",
     "right": "Droite",
     "user": "Utilisateur",
-    "savedSettingsSuccess": "Paramètres sauvegardés avec succès."
+    "savedSettingsSuccess": "Paramètres sauvegardés avec succès.",
+    "select": "Sélectionner...",
+    "item": "Élément",
+    "address": "Adresse",
+    "location": "Localisation",
+    "startTyping": "Commencez à écrire...",
+    "searching": "Recherche...",
+    "information": "Information"
   },
   "Nav": {
     "citizen": "Citoyen",
@@ -86,8 +93,8 @@
     "dlExams": "Examens du permis de conduire",
     "dmv": "Service du Permis de Conduire et des Papiers du Véhicule",
     "penalCodes": "Code Pénal",
-    "weaponExams": "Examens pour le PPA",
-    "myDeputyLogs": "Mes Logs (EMS/FD)"
+    "myDeputyLogs": "Mes Logs (EMS/FD)",
+    "whatsNew": "Nouveautés"
   },
   "Errors": {
     "unknown": "Une erreur inattendue s'est produite",
@@ -154,6 +161,9 @@
     "serialNumberInUse": "Le numéro de série est déjà utilisé.",
     "vinNumberInUse": "Le numéro NIV est déjà utilisé.",
     "alreadyHasPrimaryUnit": "Cet appel a déjà une unité primaire",
-    "noActiveOfficer": "Vous n'avez pas d'officer actif pour le moment, veuillez retournez en service."
+    "noActiveOfficer": "Vous n'avez pas d'officer actif pour le moment, veuillez retournez en service.",
+    "socialSecurityNumberTaken": "Ce numéro de sécurité social est déjà utilisé.",
+    "citizenNotAllowedToEditLicenses": "Vous n'avez pas la permission pour éditer vos licences. Veuillez contacter un officier.",
+    "vehicleIsImpounded": "Ce véhicule est saisi, vous ne pouvez l'éditer ou le supprimer tant qu'il n'est pas libéré."
   }
 }
