--- a/apps/client/locales/en/ems-fd.json
+++ b/apps/client/locales/en/ems-fd.json
@@ -3,16 +3,16 @@
     "emsFd": "EMS/FD",
     "createMedicalRecord": "Create Medical Record",
     "searchMedicalRecord": "Search Medical Record",
-    "activeDeputies": "Active Deputies",
+    "activeDeputies": "Active EMS/FD Deputies",
     "selectDeputy": "Select Deputy",
     "deputy": "Deputy",
-    "myDeputies": "My Deputies",
+    "myDeputies": "My EMS/FD Deputies",
     "createDeputy": "Create Deputy",
     "editDeputy": "Edit Deputy",
     "deputyName": "Deputy Name",
     "deleteDeputy": "Delete Deputy",
-    "noDeputies": "You do not have any deputies",
-    "noActiveDeputies": "There are no active deputies",
+    "noDeputies": "You do not have any EMS/FD deputies",
+    "noActiveDeputies": "There are no active EMS/FD deputies",
     "citizenNoMedicalRecords": "This citizen doesn't have any medical records.",
     "activeDeputy": "Active Deputy",
     "declareDead": "Declare dead",
