--- a/apps/client/locales/en/leo.json
+++ b/apps/client/locales/en/leo.json
@@ -239,6 +239,7 @@
     "suspendWaterLicense": "Suspended Water license",
     "suspendFirearmsLicense": "Suspended Firearms license",
     "endDate": "End Date",
+    "patrolVehicle": "Patrol Vehicle",
     "alert_deleteNote": "Are you sure you want to delete this note? This action cannot be undone.",
     "alert_deleteQualification": "Are you sure you want to delete this qualification? This action cannot be undone.",
     "vehicleImpoundLocation": "The provided vehicle ({plate}) will be impounded at {impoundLocation}. You will be able to view this vehicle on the impound lot page.",
