:hammer: chore: update en-gb translations

--- a/apps/client/locales/en-gb/admin.json
+++ b/apps/client/locales/en-gb/admin.json
@@ -12,6 +12,7 @@
     "MANAGE_CUSTOM_FIELDS": "Manage Custom Fields",
     "MANAGE_CUSTOM_ROLES": "Manage Custom Roles",
     "MANAGE_COURTHOUSE": "Manage Courthouse",
+    "MANAGE_PENDING_WARRANTS": "Manage Pending Warrants",
     "import": "Import",
     "IMPORT_CITIZENS": "Import Civilians",
     "IMPORT_VEHICLES": "Import Vehicles",
@@ -36,6 +37,7 @@
     "status": "Status",
     "allBusinesses": "All Businesses",
     "whitelisted": "Whitelisted",
+    "declineUnit": "Decline Unit",
     "declineOfficer": "Decline Unit",
     "action": "Action",
     "noPendingOfficers": "There are no officers pending access to a force.",
