--- a/apps/client/locales/en-gb/citizen.json
+++ b/apps/client/locales/en-gb/citizen.json
@@ -42,6 +42,19 @@
     "manageOccupation": "Manage Occupation",
     "manageLicenses": "Manage Licenses",
     "licenses": "Licenses",
+    "licenseSuspendedInfo": "License is suspended. Please contact an officer to revoke the suspension.",
+    "licenseNumber": "DVLA License Number",
+    "unmarkAsStolen": "Unmark as Stolen",
+    "markCitizenDeceased": "Mark cilivian deceased",
+    "citizenDead": "WARNING: This civilian died on {date}",
+    "basicInformation": "Basic Information",
+    "optionalInformation": "Optional Information",
+    "licenseInformation": "License Information",
+    "officer": "Officer",
+    "createWithOfficer": "Create with Officer",
+    "previousRecords": "Previous Records",
+    "createPreviousRecordsStepDescription": "Here you can optionally add previous records this civilian has had. This is useful for when a civilian has been arrested before.",
+    "alert_markCitizenDeceased": "Are you sure you want to delete <span>{citizen}</span>? Only the ambulance service can mark you alive again.",
     "alert_deleteCitizen": "Are you sure you want to delete <span>{citizen}</span>? This action cannot be undone."
   },
   "Vehicles": {
