--- a/apps/client/locales/en-gb/account.json
+++ b/apps/client/locales/en-gb/account.json
@@ -46,7 +46,11 @@
     "disconnectSteamText": "This will remove the ability to login via Steam.",
     "connectSteamText": "This will add the ability to login via Steam.",
     "locale": "Locale",
-    "viewMyPermissions": "View my permissions"
+    "viewMyPermissions": "View my permissions",
+    "speech": "Speech",
+    "speechVoice": "Speech Voice",
+    "otherSounds": "Other Sounds",
+    "unavailableSounds": "Unavailable Sounds"
   },
   "Notifications": {
     "CITIZEN_DELETED": "<span>{citizen}</span> was deleted. Reason: {reason}"
