--- a/apps/client/locales/en-gb/calls.json
+++ b/apps/client/locales/en-gb/calls.json
@@ -60,5 +60,15 @@
     "alert_deleteCallEvent": "Are you sure you want to delete this event? This action cannot be undone.",
     "alert_end911Call": "Are you sure you want to end this call?",
     "alert_endTowCall": "Are you sure you want to end this call?"
+  },
+  "Events": {
+    "unitAssignedToCall": "<span>{unit}</span> has been assigned to this call.",
+    "unitUnassignedToCall": "<span>{unit}</span> has been unassigned from this call.",
+    "unitsAssignedToCall": "<span>{unit}</span> have been assigned to this call.",
+    "unitsUnassignedToCall": "<span>{unit}</span> have been unassigned from this call.",
+    "unitArrivedOnScene": "<span>{unit}</span> has arrived on scene.",
+    "unitPressedPanicButton": "<span>{unit}</span> has pressed the panic button.",
+    "unitEnRoute": "<span>{unit}</span> is en-route.",
+    "unitOnScene": "<span>{unit}</span> is on scene."
   }
 }
