--- a/apps/client/locales/en-gb/leo.json
+++ b/apps/client/locales/en-gb/leo.json
@@ -241,7 +241,29 @@
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
     "alert_allowCheckout": "Are you sure you want to checkout this vehicle from the impound lot?",
     "alert_deleteIncident": "Are you sure you want to delete this incident? This action cannot be undone.",
-    "alert_revokeWarrant": "Are you sure you want to revoke this warrant? This action cannot be undone."
+    "alert_revokeWarrant": "Are you sure you want to revoke this warrant? This action cannot be undone.",
+    "paymentStatus": "Payment Status",
+    "recordPaid": "Record Paid?",
+    "showCalls": "Show calls",
+    "hideCalls": "Hide calls",
+    "showUnitsOnly": "Show units only",
+    "showAllPlayers": "Show all players",
+    "totalCost": "Total Cost",
+    "warningApplicable": "Warning Applicable",
+    "impounded": "Impounded",
+    "impoundVehicle": "Impound Vehicle",
+    "impoundedBy": "Impounded by",
+    "impoundedAt": "Impounded at",
+    "endsOn": "Ends on",
+    "assignedToCall#": "You have been assigned to call #{caseNumber}.",
+    "assignedToCall#WithType": "You have been assigned to call #{caseNumber}. Call type: {callType}",
+    "warrantCreatedButApprovalRequired": "Successfully created the warrant, however this CAD requires approval for warrants to be active. The warrant will be available once it has been approved.",
+    "suspendDriversLicense": "Suspended Drivers license",
+    "suspendPilotLicense": "Suspended Pilot license",
+    "suspendWaterLicense": "Suspended Water license",
+    "suspendFirearmsLicense": "Suspended Firearms license",
+    "endDate": "End Date",
+    "patrolVehicle": "Patrol Vehicle"
   },
   "Bolos": {
     "activeBolos": "Active Remarks",
@@ -255,6 +277,18 @@
     "person": "person",
     "vehicle": "vehicle",
     "other": "other",
+    "filters": "Filters",
     "stolen": "stolen"
+  },
+  "licenseExams": {
+    "exams": "License Exams",
+    "noExams": "There are no license exams yet.",
+    "editExam": "Edit license exam",
+    "theoryExam": "Theory Exam",
+    "practiceExam": "Practice Exam",
+    "createExam": "Create license exam",
+    "categories": "Categories",
+    "deleteExam": "Delete license exam",
+    "alert_deleteExam": "Are you sure you want to delete this license exam? This action cannot be undone."
   }
 }
