:globe_with_meridians: [Update] Add missing French translations

--- a/apps/client/locales/fr-FR/common.json
+++ b/apps/client/locales/fr-FR/common.json
@@ -59,7 +59,8 @@
     "location": "Localisation",
     "startTyping": "Commencez à écrire...",
     "searching": "Recherche...",
-    "information": "Information"
+    "information": "Information",
+    "showingXResults": "Affichage de <span>{amount}</span> résultat(s)"
   },
   "Nav": {
     "citizen": "Citoyen",
@@ -164,6 +165,7 @@
     "noActiveOfficer": "Vous n'avez pas d'officer actif pour le moment, veuillez retournez en service.",
     "socialSecurityNumberTaken": "Ce numéro de sécurité social est déjà utilisé.",
     "citizenNotAllowedToEditLicenses": "Vous n'avez pas la permission pour éditer vos licences. Veuillez contacter un officier.",
-    "vehicleIsImpounded": "Ce véhicule est saisi, vous ne pouvez l'éditer ou le supprimer tant qu'il n'est pas libéré."
+    "vehicleIsImpounded": "Ce véhicule est saisi, vous ne pouvez l'éditer ou le supprimer tant qu'il n'est pas libéré.",
+    "featureNotEnabled": "Cette fonctionnalité n'est pas activée. {{feature}}"
   }
 }
