--- a/apps/client/locales/fr-FR/citizen.json
+++ b/apps/client/locales/fr-FR/citizen.json
@@ -52,6 +52,8 @@
     "licenseInformation": "Informations sur la licence",
     "officer": "Officier",
     "createWithOfficer": "Créer avec Officier",
+    "previousRecords": "Registres Précédents",
+    "createPreviousRecordsStepDescription": "Ici, vous pouvez éventuellement ajouter les registres antérieurs de ce citoyen. Ceci est utile lorsqu'un citoyen a déjà été arrêté.", 
     "alert_markCitizenDeceased": "Êtes-vous sûr de vouloir tuer <span>{citizen}</span> ? Seuls les EMS/FD pourront le faire revivre.",
     "alert_deleteCitizen": "Êtes-vous sûr de vouloir supprimer <span>{citizen}</span> ? Cette action ne peut être annulée."
   },
