:bug: [Fix] Fixed missing translation (change of var. name)

--- a/apps/client/locales/fr-FR/common.json
+++ b/apps/client/locales/fr-FR/common.json
@@ -91,7 +91,7 @@
     "callHistory": "Historique des Appels",
     "citizenLogs": "Logs des citoyens",
     "courthouse": "Tribunal",
-    "dlExams": "Examens du permis de conduire",
+    "licenseExams": "Examens de permis",
     "dmv": "Service du Permis de Conduire et des Papiers du Véhicule",
     "penalCodes": "Code Pénal",
     "myDeputyLogs": "Mes Logs (EMS/FD)",
