--- a/apps/client/locales/en/admin.json
+++ b/apps/client/locales/en/admin.json
@@ -64,6 +64,29 @@
     "editUser": "Edit User",
     "editing": "You are currently editing <span>{user}</span>",
     "editUnit": "Edit Unit",
+    "users": "Users",
+    "pending": "Pending",
+    "banned": "Banned",
+    "officers": "Officers",
+    "emsFdDeputies": "EMS/FD Deputies",
+    "citizens": "Citizens",
+    "arrested": "Arrested",
+    "dead": "Dead",
+    "images": "Images",
+    "created": "Created",
+    "registered": "Registered",
+    "active": "Active",
+    "vehicles": "Vehicles",
+    "leo": "LEO",
+    "emsFd": "EMS/FD",
+    "onDuty": "On Duty",
+    "suspended": "Suspended",
+    "manageCourthouseDescription": " Here you can manage expungement requests, name change requests and pending warrants.",
+    "manageCustomFieldsDescription": "Here you can manage custom fields. These are fields can be added by any officers to citizens in name-search.",
+    "manageCustomRolesDescription": "Here you can manage custom roles. These roles can be assigned to users instead of giving permissions one by one.",
+    "importCitizensDescription": "Here you can mass import citizens that may not be connected to a registered user.",
+    "importVehiclesDescription": "Here you can mass import vehicles that are registered to a citizen. In the table below you can see all registered vehicles.",
+    "importWeaponsDescription": "Here you can mass import weapons that are registered to a citizen. In the table below you can see all registered weapons.",
     "alert_deleteCustomRole": "Are you sure you want to delete <span>{role}</span>? This action cannot be undone",
     "alert_deleteUnit": "Are you sure you want to delete <span>{unit}</span>? This action cannot be undone!",
     "alert_deleteCustomField": "Are you sure you want to delete this custom field? This action cannot be undone. All values created with this field will also be deleted.",
