--- a/apps/client/locales/fr-FR/admin.json
+++ b/apps/client/locales/fr-FR/admin.json
@@ -64,6 +64,29 @@
     "editUser": "Modifier l'utilisateur",
     "editing": "Vous êtes en train de modifier <span>{user}</span>",
     "editUnit": "Modifier l'unité",
+    "users": "Utilisateurs",
+    "pending": "En attente",
+    "banned": "Banni",
+    "officers": "Agents",
+    "emsFdDeputies": "Adjoints EMS/FD",
+    "citizens": "Citoyens",
+    "arrested": "Arrêté",
+    "dead": "Mort",
+    "images": "Images",
+    "created": "Créé",
+    "registered": "Enregistré",
+    "active": "Actif",
+    "vehicles": "Véhicules",
+    "leo": "LEO",
+    "emsFd": "EMS/FD",
+    "onDuty": "En service",
+    "suspended": "Suspendu",
+    "manageCourthouseDescription": "Vous pouvez y gérer les demandes de radiation, les demandes de changement de nom et les mandats en cours.",
+    "manageCustomFieldsDescription": "Ici, vous pouvez gérer les champs personnalisés. Ces champs peuvent être ajoutés par n'importe quel agent aux citoyens dans la recherche de noms.",
+    "manageCustomRolesDescription": "Ici, vous pouvez gérer des rôles personnalisés. Ces rôles peuvent être attribués aux utilisateurs au lieu de donner des permissions une par une.",
+    "importCitizensDescription": "Ici, vous pouvez importer en masse des citoyens qui ne sont pas forcément liés à un utilisateur enregistré.",
+    "importVehiclesDescription": "Ici, vous pouvez importer en masse les véhicules qui sont enregistrés au nom d'un citoyen. Dans le tableau ci-dessous, vous pouvez voir tous les véhicules enregistrés.",
+    "importWeaponsDescription": "Ici, vous pouvez importer en masse les armes qui sont enregistrées au nom d'un citoyen. Dans le tableau ci-dessous, vous pouvez voir toutes les armes enregistrées.",
     "alert_deleteCustomRole": "Êtes-vous sûr de vouloir supprimer <span>{role}</span> ? Cette action ne peut pas être annulée",
     "alert_deleteUnit": "Êtes-vous sûr de vouloir supprimer <span>{unit}</span> ? Cette action ne peut pas être annulée !",
     "alert_deleteCustomField": "Êtes-vous sûr de vouloir supprimer ce champ personnalisé ? Cette action ne peut pas être annulée. Toutes les valeurs créées avec ce champ seront également supprimées.",
